# migrama

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: quickstart.rst  workflows.rst
docs/modules/: cell-viewer.rst
examples/: run_pipeline.sh
src/migrama/analyze/: core.py
src/migrama/cli/: main.py
src/migrama/convert/: core.py
src/migrama/core/io/: tiff_export.py  zarr_io.py
src/migrama/core/pattern/: detector.py
src/migrama/core/segmentation/: segmentation.py
src/migrama/extract/: core.py
src/migrama/graph/: zarr_loader.py
src/migrama/utils/: __init__.py  plot.py
src/migrama/viewer/: main.py
src/migrama/viewer/ui/: main_window.py
tests/: conftest.py  test_analyze.py  test_cli_mvp.py  test_extract.py  test_pattern.py  test_pattern_bbox.py  test_save.py  test_zarr_compat.py  test_zarr_io.py
